# plover-jackdaw-alt1

./: .gitignore  README.md  generate-typey-type-lessons.py  jackdaw_custom.json  jackdaw_default.py  plover_jackdaw_alt1.py  setup.cfg
