[metadata]
name = plover_jackdaw_alt1
version = 0.0.0
description = Jackdaw similar plugin for Plover.
long_description = file: README.md
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = False
install_requires =
    plover>=4.0.0.dev8
	plover-python-dictionary>=0.5.10
py_modules =
    plover_jackdaw_alt1
package_data =
    jackdaw_default.py
	jackdaw_custom.json
include_package_data = False

[options.entry_points]
plover.system =
	Jackdaw Alt1 = plover_jackdaw_alt1
